k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spire-ingress
  namespace: spire
spec:
  tls:
    - hosts:
        - spire.oidc-tutorial.org
      secretName: oidc-secret
  rules:
    # Replace with Fully Qualified Domain Name (FQDN) for the discovery provider.
    - host: spire.oidc-tutorial.org
      http:
        paths:
          - path: /.well-known/openid-configuration
            backend:
              serviceName: spire-oidc
              servicePort: 443
